tests/fixtures/positive/supply-chain/version-catalog-build-src-mismatch/settings.gradle.kts
rootProject.name = "version-catalog-buildsrc-mismatch-positive"
include(":app")
