tests/fixtures/negative/supply-chain/version-catalog-build-src-mismatch/settings.gradle.kts
rootProject.name = "version-catalog-buildsrc-mismatch-negative"
include(":app")
